# REST-FastAPI-Agenda

./: Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
app/: database.py  main.py  settings.py
app/agenda/: agenda_api.py  agenda_repo.py  models.py  schema.py
