[tool.poetry]
name = "pythonprojectinternship"
version = "0.1.0"
description = ""
authors = ["Aguda <agudarustefan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
uvicorn = "^0.23.1"
pydantic-settings = "^2.0.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
